--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,13 +1,13 @@
-FROM tensorflow/tensorflow:latest-gpu-py3
+FROM tensorflow/tensorflow:2.3.0-gpu
 
-RUN apt -y update
-
+RUN apt-get -y install python3
+RUN apt-get -y install python3-pip
 RUN apt-get -y install jq
 
 COPY . /app
 
 WORKDIR /app
 
-RUN pip install --upgrade pip
+RUN pip3 install --upgrade pip
 
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
