--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 cycler==0.10.0
-gast==0.3.3
 google-auth==1.21.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
@@ -28,7 +27,7 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
 numpy==1.18.5
 oauthlib==3.1.0
-opencv-python==4.4.0.42
+opencv-python-headless
 opt-einsum==3.3.0
 pandas==1.1.1
 pathspec==0.8.0
