--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
 numpy==1.18.5
 oauthlib==3.1.0
+tensorflow-addons==0.11.2
 opencv-python-headless
 opt-einsum==3.3.0
 pandas==1.1.1
