some tideying up

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /YOLO/Data/Source_Images
 /images
-/index.txt
+/cat_downloader/index.txt
 /cat_verificator/weights/checkpoints
 /cat_verificator/data
 
